fixing text align on error message - login page

--- a/omod/src/main/compass/sass/login.scss
+++ b/omod/src/main/compass/sass/login.scss
@@ -18,4 +18,8 @@ header {
       padding: 8px 40px;
     }
   }
+
+  .error-message {
+    text-align: none;
+  }
 }
